# IntrinsicOpt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LBFGS_Opt.h  point_sample.h  surface_mesh.h
include/LBFGSpp/: LBFGS 2.h  LBFGS.h
include/LBFGSpp/LBFGSpp/: Param 2.h
include/MeshTrace/: trace_manager.h
include/MeshTrace/MeshTrace/: trace.h
point_sample/: CMakeLists.txt  point_sample.cpp  point_sample.h
utils/: KDTreeVectorOfVectorsAdaptor.h  barycentric_to_cartesian.h  eigen_binaryIO.h  kdtree.hpp  nanoflann.hpp  readVTK.h  read_lattice.h  read_vtk.h  read_zyz.h  trace.h  trivial_case.h
